--- a/public/templates/405.html
+++ b/public/templates/405.html
@@ -49,7 +49,7 @@
                 display: inline-block;
                 width: 140px;
                 height: 140px;
-                background-image: url('public/static/emoji.png');
+                background-image: url('/static/emoji.png');
                 background-size: cover;
             }
 
